--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="icon" href="img/WebLogo.png" />
+    <link rel="icon" href="WebLogo.png" />
     <title>OrangeDev</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
 
 <section class="text-gray-700 body-font">
   <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
-    <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="img/AboutLogo.png">
+    <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="AboutLogo.png">
     <div class="text-center lg:w-2/3 w-full">
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">About Me</h1>
       <p class="mb-8 leading-relaxed">Hello I am Orange and I am an programmer who is working with languages like JavaScript, Python, HTML, CSS, and some more. You can also find me in Repl.it and GitHub by orange541. I am most active in Repl.it.</p>
